2002-10-19  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.23.3

	* linkedlist.c (lladd): fix typo.

	* configure.ac: 0.23.2.cvs.2

	* autogen.sh: remove ./configure from autogen script.

	* linkedlist.c (lladd): add error checking in lladd routine.
	add gettext related includes.

2002-10-09  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.23.2.cvs.1
	change version so that we know.

2002-10-07  Junichi Uekawa  <dancer@debian.org>

	* debian/rules (DSH): remove unneeded definitions

	* debian/control (Standards-Version): update standards-version to 3.5.7

2002-10-02  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: spelling mistake in configure script. fix.

2002-10-01  Junichi Uekawa  <dancer@debian.org>

	* dcp.sh: trying to create an implementation of dcp.

2002-09-30  Junichi Uekawa  <dancer@debian.org>

	* parameter.c (parse_options): move index_point to inside the 
	HAVE_GETOPT_LONG, because index_point is used with getopt_long only.

	* configure.ac: 0.23.2
	Compiles and works on AIX.

	* tests/param-unknown.sh: add -u to check.
	along with --unknown-parameter.

	* dsh.c (do_echoing_back_process): use size_t for getline argument.

	* configure.ac: 0.23.1.aix.2

	* parameter.c (read_machinenetgroup): 
	work around AIX and work around void function.

	* configure.ac: check for setnetgrent
	(SETNETGRENT_RETURNS_VOID): check for setnetgrent which
	returns void (AIX is possibly broken in this respect, so
	work around it).

	* parameter.c (read_machinelist): use size_t instead of int, 
	because getline parameter is in size_t, and AIX likes 
	size_t to be a long.
	(parse_options): change ifdef statement because AIX 
	cpp barfs on #ifdef outside of function.
	move config.h inclusion to start.

	* configure.ac: change gettext check to be warning.
	version 0.23.1.aix.1

	* configure.ac: version 0.23.1, translation is updated,
	and more checks are in place.

	* configure.ac: add checks that are recommended by 