@@ -1,5 +1,7 @@
 2002-10-19  Junichi Uekawa  <dancer@debian.org>
 
+	* ja.po: update  change
+
 	* POTFILES.in: add linkedlist.c to the list.
 
 2002-09-30  Junichi Uekawa  <dancer@debian.org>
