@@ -1,5 +1,9 @@
 2002-10-19  Junichi Uekawa  <dancer@debian.org>
 
+	* parameter.c (parse_options): fail on error.
+
+	* dsh.c (execute_rsh_multiple): add some error checking.
+
 	* configure.ac: 0.23.3
 
 	* linkedlist.c (lladd): fix typo.
